ch7/ch7-proc-macro-errors/panic-to-result-usage/tests/fails/create_person_two_issues.stderr
error: panic needs a message!

         = help: try to add a message: panic!("Example".to_string())
         = note: we will add the message to Result's Err

  --> tests/fails/create_person_two_issues.rs:12:9
   |
12 |         panic!();
   |         ^^^^^^^^^

error: this macro can only be applied to a function that does not yet return a Result. Signature: Result < String, Person >
  --> tests/fails/create_person_two_issues.rs:10:56
   |
10 | fn create_person_two_issues(name: String, age: u32) -> Result<String, Person> {
   |                                                        ^^^^^^^^^^^^^^^^^^^^^^
